bit of code clean

--- a/simple-product.html
+++ b/simple-product.html
@@ -34,7 +34,7 @@ Simple product designed to show some real life tests
     }
 
     </style>
-    <a href="[[href]]">
+    <a href$="[[href]]">
       <img id="product-image"
         src="[[product.image.primary]]"
         primary-src="[[product.image.primary]]"
