clean up comments

--- a/test/structured-data.tests.html
+++ b/test/structured-data.tests.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>simple-product test</title>
+    <title>simple-product structured data tests</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
