Updating documentation and some code clean

--- a/simple-product.html
+++ b/simple-product.html
@@ -2,7 +2,9 @@
 
 <!--
 `simple-product`
-Simple product designed to show some real life tests
+An example simple product component to show our testing principles.
+
+Similar to `<nap-product-summary>` but with a lot of the features removed.
 
 @demo demo/index.html
 -->
