--- a/test/unit-tests.html
+++ b/test/unit-tests.html
@@ -43,6 +43,7 @@
         var element;
 
         setup( () => {
+          // using test fixture 
           element = fixture('basic');
         });
 
