--- a/simple-product.html
+++ b/simple-product.html
@@ -44,7 +44,7 @@ Similar to `<nap-product-summary>` but with a lot of the features removed.
         alt="[[product.brand.name]] - [[product.name]]"
         on-mouseover="_showSecondaryImage"
         on-mouseout="_showPrimaryImage"
-        />
+      />
       <p class="brand-name">[[product.brand.name]]</p>
       <p class="product-description" itemprop="name">[[product.name]]</p>
       <p class="price">[[price]]</p>
@@ -68,6 +68,7 @@ Similar to `<nap-product-summary>` but with a lot of the features removed.
           computed: '_computeSeoFriendlyLink(product.locale, product.brand.key, product.key, product.id)'
         }
       },
+
       // Wrapping product attribute around the host
       hostAttributes: {
         itemtype: 'http://schema.org/Product',
@@ -78,10 +79,13 @@ Similar to `<nap-product-summary>` but with a lot of the features removed.
        * Localised price string
        * @param {Object} price - price object include ammount and currency
        * @param {String} locale - A string with a BCP 47 language tag
-       * @return {string} price - localised price as a string
+       * @return {String} price - localised price as a string
        */
       _computeLocalisedPrice: (price, locale) => {
-        return price.amount.toLocaleString(locale, { style: 'currency', currency: price.currency })
+        return price.amount.toLocaleString(locale, {
+          style: 'currency',
+          currency: price.currency
+        });
       },
 
       /**
